Implement Runnable instead of extending Thread.